<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PocketMocker</string>
    <string name="action_settings">Settings</string>
    <string name="record">Record</string>
    <string name="stop_record">Stop Recording</string>
    <string name="loc_placeholder">Will display location data when the recording process begins.</string>
    <string name="loc_prefix">"Current Location: "</string>
    <string name="objectives">Objectives you\'ve created:</string>
    <string name="objectives_detail">1. Select or create an objective.</string>
    <string name="objective_name">Objective Name</string>
    <string name="objective_dialog_detail">It seems to be your first time using PocketMocker. Before using PocketMocker, you must create a new mocking objective.</string>
    <string name="objective_dialog_title">Create Objective</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="overwrite_recording_question">Are you sure you want to overwrite the recording for <b>objective</b>?</string>
    <string name="ok">OK</string>
    <string name="subscribe">Subscribe</string>
    <string name="test_mock_service">Test Mock Service</string>
    <string name="replay">Replay</string>
    <string name="stop_replaying">Stop Replaying</string>
    <string name="empty_objective_name">Please enter a name for the new objective!</string>
    <string name="empty"></string>
    <string name="scan_and_insert_wifi">Scan &amp; Insert Wifi</string>
    <string name="record_detail">2. Record your data.</string>
    <string name="replay_detail">2. Replay your data.</string>
    <string name="about">About</string>
    <string name="about_detail">PocketMocker is an experiment to protect your privacy through mocking your behavior. After recording initial data, you are free to replay that data as much as you want. When replaying, apps that request that data will see the recorded data instead of the actual data provided by the hardware.\n\nPocketMocker can record and replay the following data:\n&#8226;Location\n&#8226;All sensors\n&#8226;Wifi and Network\n\nMade with &lt;3 in Buffalo, NY.</string>
    <string name="log">Log</string>
    <string name="no_replay_while_record">You cannot replay while you are recording!</string>
    <string name="no_record_while_replay">You cannot record while you are replaying!</string>

</resources>