<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        style="@android:style/TextAppearance.Large"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/objective_detail"
        style="@android:style/TextAppearance.Small"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/objectives_detail" />

    <Spinner
        android:id="@+id/objectives_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin" />

    <TextView
        android:id="@+id/record_detail"
        style="@android:style/TextAppearance.Small"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/record_detail" />

    <Button
        android:id="@+id/record_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="recordButtonClicked"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/record" />

    <TextView
        android:id="@+id/replay_detail"
        style="@android:style/TextAppearance.Small"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/replay_detail" />

    <Button
        android:id="@+id/replay_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="replayButtonClicked"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/replay" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/log" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#000000" />

    <ScrollView
        android:id="@+id/log_scrollview"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent" >
    </ScrollView>

</LinearLayout>